// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubNav /> renders base component correctly 1`] = `
<div>
  <nav
    class="base dark"
  >
    <h3
      class="base small dark heading"
    >
      Phasellus aliquet sem
    </h3>
    <ul
      class="base dark"
    >
      <li
        class="item item"
      >
        <a
          class="base left dark link"
          href="https://aesop.com/"
          target="_self"
        >
          Morbi id nulla
        </a>
      </li>
      <li
        class="item item"
      >
        <a
          class="base left dark link"
          href="https://aesop.com/"
          target="_self"
        >
          Nullam ultrices
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<SubNav /> renders without heading if no \`heading\` prop is passed 1`] = `
<div>
  <nav
    class="base dark"
  >
    <ul
      class="base dark"
    >
      <li
        class="item item"
      >
        <a
          class="base left dark link"
          href="https://aesop.com/"
          target="_self"
        >
          Morbi id nulla
        </a>
      </li>
      <li
        class="item item"
      >
        <a
          class="base left dark link"
          href="https://aesop.com/"
          target="_self"
        >
          Nullam ultrices
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
